# azureAIFoundrySample

./: README.md
.github/workflows/: apis.yml  base_infra.yml  core.yml  create_core.yml  create_foundry.yml  flight_apis.yml  foundry.yml  project.yml  seeding.yml  workload.yml
apis/: flight-api.bicep
assets/: architecture.drawio
docs/: FLIGHT-API.md
infra/: main.bicep
infra/base/: agent.yaml  main.bicep  main.bicepparam  shared.services.bicep
infra/bicep/: main.bicep  main.bicepparam  project.bicep
infra/createCoreResources/: main.tf  output.tf  providers.tf  variables.tf  versions.tf
infra/createEnv/: create_dns_record.bicep  main.bicep  main.bicepparam
infra/foundry/: main.bicep  main.bicepparam
infra/modules/: ai-project-identity.bicep  cosmos-container-role-assignments.bicep
infra/project/: main.bicep  main.bicepparam  post.rbac.bicep  rbac.project.bicep
infra/terraform/: .gitignore  README.md  (+6 more)
notebook/: .gitignore  agent.ipynb  on-behalf-of.ipynb
src/apis/flight-api/: AzuriteConfig  Dockerfile  README.md  api.http  bootstapper.py  config.py  dependencies.py  main.py  openapi.json  pyproject.toml  requirements.txt  seed.py  server.py
src/apis/flight-api/contract/: __init__.py  book_request.py  booking_info_request.py  flight_info_request.py
src/apis/flight-api/data/: airport.json  flights.json
src/apis/flight-api/models/: __init__.py  airport.py  flight.py  flight_info.py
src/apis/flight-api/repository/: flight_repository.py
src/apis/flight-api/routes/: __init__.py  airport.py  booking.py  flight.py
workflows/: base_infra.yml
(+29 files in other folders)
